"Added index router, updated models, added dotenv dependency, and modified routes and views"

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,5 +11,5 @@
 
 <body class="font-['helvetica_now_display']">
     <nav class="w-full fixed top-0 left-0 px-5 py-3">
-        <h3 class="text-xl">Scatch</h3>
+        <h3 class="text-xl">The-Virtual-Vault</h3>
     </nav>
