--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,16 @@
 <%- include('./partials/header') %>
 
-    <% if(error.length>0){ %>
+    <!-- <% if(error.length>0){ %>
         <div class="absolute top-5 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-md bg-red-500">
             <span class="inline-block mt-1 mb-1 text-white">
                 <%= error %>
             </span>
         </div>
-        <% } %>
+        <% } %> -->
             <div class="w-full h-screen flex px-20">
                 <div class="w-1/2 flex items-center justify-center h-screen">
                     <div class="w-full px-32">
-                        <h3 class="text-4xl">welcome to <span class="text-blue-400 font-semibold">Scatch</span></h3>
+                        <h3 class="text-4xl">Welcome to <span class="text-blue-400 font-semibold">The-Virtual-Vault</span></h3>
                         <h4 class="text-2xl mb-5">create your account</h4>
                         <form autocomplete="off" action="/users/register" method="post">
                             <input
@@ -29,7 +29,7 @@
                 </div>
                 <div class="w-1/2 flex items-center justify-center h-screen">
                     <div class="w-full px-32">
-                        <h4 class="text-2xl capitalize mb-5">login your account</h4>
+                        <h4 class="text-2xl capitalize mb-5">Login your account</h4>
                         <form autocomplete="off" action="/users/login" method="post">
                             <input
                                 class="block bg-zinc-100 w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
