--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,17 @@
 <%- include('./partials/header') %>
 
-    <!-- <% if(error.length>0){ %>
+    <% if(error.length>0){ %>
         <div class="absolute top-5 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-md bg-red-500">
             <span class="inline-block mt-1 mb-1 text-white">
                 <%= error %>
             </span>
         </div>
-        <% } %> -->
+        <% } %>
             <div class="w-full h-screen flex px-20">
                 <div class="w-1/2 flex items-center justify-center h-screen">
                     <div class="w-full px-32">
-                        <h3 class="text-4xl">Welcome to <span class="text-blue-400 font-semibold">The-Virtual-Vault</span></h3>
+                        <h3 class="text-4xl">Welcome to <span
+                                class="text-blue-400 font-semibold">The-Virtual-Vault</span></h3>
                         <h4 class="text-2xl mb-5">create your account</h4>
                         <form autocomplete="off" action="/users/register" method="post">
                             <input
