--- a/views/createproducts.ejs
+++ b/views/createproducts.ejs
@@ -9,14 +9,14 @@
         <% } %>
 
             <div class="min-h-screen flex flex-col">
-                <div class="container px-10 py-20 flex flex-grow">
+                <div class="container px-10 py-20 flex flex-grow ">
                     <div class="w-[25%] flex h-screen flex-col items-start">
                         <div class="flex flex-col">
                             <a class="block w-fit mb-2" href="">All Products</a>
-                            <a class="block w-fit mb-2" href="">Create new product</a>
+                            <a class="block w-fit mb-2" href="">Create New Product</a>
                         </div>
                     </div>
-                    <main class="w-3/4 bg-white p-8 shadow ml-4">
+                    <main class="w-3/4 bg-gray-300 p-8 shadow ml-4 ">
                         <h2 class="text-xl font-bold mb-4">Create New Product</h2>
                         <form autocomplete="off" action="/products/create" method="post" enctype="multipart/form-data">
                             <div class="mb-6">
