--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,47 +1,54 @@
 <%- include('./partials/header') %>
 
-    <% if(error.length>0){ %>
+    <% if(typeof error !== 'undefined' &&  error.length>0){ %>
         <div class="absolute top-5 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-md bg-red-500">
             <span class="inline-block mt-1 mb-1 text-white">
                 <%= error %>
             </span>
         </div>
         <% } %>
-            <div class="w-full h-screen flex px-20">
-                <div class="w-1/2 flex items-center justify-center h-screen">
-                    <div class="w-full px-32">
-                        <h3 class="text-4xl">Welcome to <span
-                                class="text-blue-400 font-semibold">The-Virtual-Vault</span></h3>
-                        <h4 class="text-2xl mb-5">create your account</h4>
-                        <form autocomplete="off" action="/users/register" method="post">
-                            <input
-                                class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
-                                type="text" placeholder="Enter your Name" name="name">
-                            <input
-                                class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
-                                type="email" placeholder="Enter your Email" name="email">
-                            <input
-                                class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
-                                type="password" placeholder="Enter your Password" name="password">
-                            <input class="px-5 rounded-full py-3 mt-2 bg-blue-500 text-white" type="submit"
-                                value="Create My Account">
-                        </form>
-                    </div>
+            <% if(typeof success !== 'undefined' && success.length>0){ %>
+                <div class="absolute top-5 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-md bg-blue-500">
+                    <span class="inline-block mt-1 mb-1 text-white">
+                        <%= success %>
+                    </span>
                 </div>
-                <div class="w-1/2 flex items-center justify-center h-screen">
-                    <div class="w-full px-32">
-                        <h4 class="text-2xl capitalize mb-5">Login your account</h4>
-                        <form autocomplete="off" action="/users/login" method="post">
-                            <input
-                                class="block bg-zinc-100 w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
-                                type="email" placeholder="Email" name="email">
-                            <input
-                                class="block bg-zinc-100 w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
-                                type="password" placeholder="Password" name="password">
-                            <input class="px-5 block rounded-full py-3 mt-2 bg-blue-500 text-white" type="submit"
-                                value="Login">
-                        </form>
+                <% } %>
+                    <div class="w-full h-screen flex px-20">
+                        <div class="w-1/2 flex items-center justify-center h-screen">
+                            <div class="w-full px-32">
+                                <h3 class="text-4xl">Welcome to <span
+                                        class="text-blue-400 font-semibold">The-Virtual-Vault</span></h3>
+                                <h4 class="text-2xl mb-5">create your account</h4>
+                                <form autocomplete="off" action="/users/register" method="post">
+                                    <input
+                                        class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
+                                        type="text" placeholder="Enter your Name" name="name">
+                                    <input
+                                        class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
+                                        type="email" placeholder="Enter your Email" name="email">
+                                    <input
+                                        class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
+                                        type="password" placeholder="Enter your Password" name="password">
+                                    <input class="px-5 rounded-full py-3 mt-2 bg-blue-500 text-white" type="submit"
+                                        value="Create My Account">
+                                </form>
+                            </div>
+                        </div>
+                        <div class="w-1/2 flex items-center justify-center h-screen">
+                            <div class="w-full px-32">
+                                <h4 class="text-2xl capitalize mb-5">Login your account</h4>
+                                <form autocomplete="off" action="/users/login" method="post">
+                                    <input
+                                        class="block bg-zinc-100 w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
+                                        type="email" placeholder="Email" name="email">
+                                    <input
+                                        class="block bg-zinc-100 w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
+                                        type="password" placeholder="Password" name="password">
+                                    <input class="px-5 block rounded-full py-3 mt-2 bg-blue-500 text-white"
+                                        type="submit" value="Login">
+                                </form>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <%- include('./partials/footer') %>
+                    <%- include('./partials/footer') %>
