--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,48 +1,44 @@
 <%- include('./partials/header') %>
-<div class="w-full h-screen flex items-start px-20 py-20">
-    <div class="w-[25%] flex h-screen flex-col items-start">
-        <div class="flex items-center gap-2">
-            <h3>sort by</h3>
-            <form action="/shop">
-                <select class="border-[1px] px-2 py-1" name="sortby" id="">
-                    <option value="popular">Popular</option>
-                    <option value="newest">Newest</option>
-                </select>
-            </form>
+<div class="w-full min-h-screen flex flex-col items-start px-20 py-20 bg-gray-100">
+    <div class="w-full flex">
+        <div class="w-1/4 flex flex-col items-start bg-white p-6 rounded-lg shadow-lg">
+            <div class="flex items-center gap-2 mb-6">
+                <h3 class="text-lg font-semibold">Sort by</h3>
+                <form action="/shop">
+                    <select class="border border-gray-300 px-2 py-1 rounded-lg" name="sortby" id="">
+                        <option value="popular">Popular</option>
+                        <option value="newest">Newest</option>
+                    </select>
+                </form>
+            </div>
+            <div class="flex flex-col mb-12">
+                <a class="block mb-2 text-blue-600 hover:underline" href="">New Collection</a>
+                <a class="block mb-2 text-blue-600 hover:underline" href="">All Products</a>
+                <a class="block mb-2 text-blue-600 hover:underline" href="">Discounted Products</a>
+            </div>
+            <div class="flex flex-col">
+                <a class="block mb-2 text-blue-600 hover:underline" href="">Filter by :</a>
+                <a class="block mb-2 text-blue-600 hover:underline" href="">Availability</a>
+                <a class="block mb-2 text-blue-600 hover:underline" href="">Discount</a>
+            </div>
         </div>
-        <div class="flex flex-col mt-20">
-            <a class="block w-fit mb-2" href="">New Collection</a>
-            <a class="block w-fit mb-2" href="">All Products</a>
-            <a class="block w-fit mb-2" href="">Discounted Products</a>
-        </div>
-        <div class="mt-32">
-            <a class="block w-fit mb-2" href="">Filter by :</a>
-            <a class="block w-fit mb-2" href="">Availability</a>
-            <a class="block w-fit mb-2" href="">Discount</a>
-        </div>
-    </div>
-    <div class="w-[75%] flex flex-col gap-5 h-screen">
-        <div class="flex items-start gap-5 flex-wrap">
+        <div class="w-3/4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 ml-6">
             <% products.forEach(function(product){ %>
-                <div class="w-60 flex-shrink-0">
-                    <div class="w-full h-52 flex items-center justify-center bg-[<%= product.bgColor %>]">
-                        <img class="h-[12rem]" src="data:image/jpeg;base64,<%= product.image.toString('base64') %>"
-                            alt="">
+                <div class="flex flex-col bg-white shadow-lg rounded-lg overflow-hidden">
+                    <div class="flex-1 flex items-center justify-center bg-[<%= product.bgColor %>] h-52 p-4">
+                        <img class="h-[12rem] object-contain" src="data:image/jpeg;base64,<%= product.image.toString('base64') %>" alt="<%= product.name %>">
                     </div>
                     <div class="flex justify-between bg-[<%= product.panelColor %>] items-center px-4 py-4 text-[<%= product.textColor %>]">
                         <div>
-                            <h3>
-                                <%= product.name %>
-                            </h3>
-                            <h4>₹ <%= product.price %>
-                            </h4>
+                            <h3 class="text-lg font-semibold"><%= product.name %></h3>
+                            <h4 class="text-md">₹ <%= product.price %></h4>
                         </div>
-                        <a class="w-7 h-7 flex items-center justify-center rounded-full bg-white" href="">
+                        <a class="w-7 h-7 flex items-center justify-center rounded-full bg-white text-black hover:bg-gray-200" href="">
                             <i class="ri-add-line"></i>
                         </a>
                     </div>
                 </div>
-                <% }) %>
+            <% }) %>
         </div>
     </div>
 </div>
