"Added CSS styles for nav element in header.ejs"

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,6 +18,16 @@
             /* Subtle shadow for better readability */
         }
 
+        /* Add this CSS to your stylesheet or within a <style> tag in your header.ejs */
+
+        nav {
+            background-image: url('/path/to/navbar_background.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 200px;
+            /* Adjust this value to fit your design */
+        }
+
         .nav-container {
             display: flex;
             justify-content: center;
