"Updated background images in header and shop views"

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -3,7 +3,11 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f5f5f5;
+            /* background-color: #f5f5f5; */
+            background-image: url('/public/images/body-background.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
             margin: 0;
             padding: 0;
         }
