--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -3,13 +3,10 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            /* background-color: #f5f5f5; */
-            background-image: url('/public/images/body-background.jpg');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
+            background-color: #f5f5f5;
             margin: 0;
             padding: 0;
+
         }
 
         .container {
