--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,12 +1,14 @@
 <%- include('./partials/header') %>
-
-    <style>
+<link rel="stylesheet" href="/styles/shop-style.css">
+    <!-- <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f5f5f5;
             margin: 0;
             padding: 0;
-
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         .container {
@@ -14,7 +16,8 @@
             max-width: 1200px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #ffffff;
+            background-color: rgba(255, 255, 255, 0.9);
+            /* semi-transparent white */
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
@@ -23,7 +26,12 @@
             width: 20%;
             padding: 20px;
             border-right: 1px solid #e0e0e0;
+            background-image: url('https://unsplash.com/photos/vHVfpi3hBXk');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
+
 
         .sidebar h3 {
             font-size: 1.4rem;
@@ -134,7 +142,8 @@
         .add-to-cart a:hover {
             background-color: #0056b3;
         }
-    </style>
+
+    </style> -->
 
     <div class="container">
         <div class="sidebar">
