--- a/public/styles/index-style.css
+++ b/public/styles/index-style.css
@@ -8,11 +8,12 @@ body {
 }
 
 .container {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.5);
     /* Adjust transparency as needed */
-    padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
 }
 
 nav {
