--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 <div class="container mx-auto flex justify-between h-screen items-center">
     <div class="w-2/5 p-5">
         <h3 class="text-4xl">Welcome to <span class="text-blue-400 font-semibold">The-Virtual-Vault</span></h3>
-        <h4 class="text-2xl mb-5">create your account</h4>
+        <h4 class="text-2xl mb-5">Create your account</h4>
         <form autocomplete="off" action="/users/register" method="post">
             <input
                 class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
