--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,5 +1,8 @@
 <%- include('./partials/header') %>
     <link rel="stylesheet" href="/styles/shop-style.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;700&family=Lora:wght@400;700&display=swap"
+        rel="stylesheet">
 
     <div class="container">
         <div class="sidebar">
