--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            scrollbar-width: none;
+        }
+
+        body {
+            font-family: 'helvetica_now_display';
+            background-color: #1a1a1a;
+            color: #e0e0e0;
+        }
+
         .brand-name {
             font-size: 2.5rem;
             font-weight: bold;
@@ -15,38 +27,32 @@
             text-align: center;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            /* Subtle shadow for better readability */
         }
-
-        /* Add this CSS to your stylesheet or within a <style> tag in your header.ejs */
-
-
 
         .nav-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            /* background-image: url('/images/close-up-clock-with-time-change.jpg'); */
-            /* Add your image path here */
-            background-size:auto ;
+            background-color: #333;
+            background-size: cover;
             background-position: center;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
             padding: 20px 0;
-            position: relative;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
             z-index: 1000;
         }
 
         .page-content {
             padding-top: 100px;
-            /* Ensure content is below the navbar */
         }
-
-       
     </style>
 </head>
 
 <body class="font-['helvetica_now_display']">
-    <nav class="w-full fixed top-0 left-0 nav-container">
+    <nav class="w-full nav-container">
         <h3 class="brand-name">The Virtual Vault</h3>
     </nav>
     <div class="page-content">
