--- a/public/styles/index-style.css
+++ b/public/styles/index-style.css
@@ -31,6 +31,7 @@ h4,
 input[type="text"],
 input[type="email"],
 input[type="password"] {
+    font-weight: 700;
     background-color: rgba(255, 255, 255, 0.8);
     /* Semi-transparent input fields */
     color: #000;
@@ -39,4 +40,7 @@ input[type="password"] {
 
 input[type="submit"]{
     color: #000;
+    font-stretch:semi-expanded;
+    font-optical-sizing:auto ;
+    font-weight: 700;
 }
