--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -36,11 +36,11 @@
                         </h4>
                     </div>
                     <div class="add-to-cart">
-                        <a href="#"><i class="ri-add-line"></i> Add to Cart</a>
+                        <a href="#"><i class="ri-add-line"></i> <span>Add to Cart</span></a>
                     </div>
                 </div>
                 <% }) %>
         </div>
     </div>
 
-<%- include('./partials/footer') %>
+    <%- include('./partials/footer') %>
